# Rust_Web_Full_Stack_Guide

db/: .env  Cargo.toml  db.sql
db/src/: main.rs
error_06/: Cargo.toml
error_06/src/: main.rs
s1/http/src/: httprequest.rs  httpresponse.rs  lib.rs
s1/httpserver/: Cargo.toml
s1/httpserver/public/: 404.html  health.html  index.html
s1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
ws-02/: Cargo.toml
ws-02/webapp/: Cargo.toml
ws-02/webapp/src/: errors.rs  handlers.rs  models.rs  routers.rs
ws-02/webapp/static/: register.html  teachers.html
ws-02/webservice/: .env  Cargo.toml
ws-02/webservice/src/: db_access.rs  errors.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
ws-02/webservice/src/dbaccess/: course.rs  teacher.rs
ws-02/webservice/src/handlers/: course.rs  general.rs  teacher.rs
ws-02/webservice/src/models/: course.rs  teacher.rs
