[package]
name = "httpserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 依赖 workspace 里的 http 库
http = {path = "../http"} 

# 用于序列化和反序列化
serde = {version="1.0.131", features=["derive"]}
serde_json = "1.0.72"
